Fix java build version